<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:background="@drawable/main_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/register_movie_button"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:onClick="launchActivity"
        android:text="@string/register_movie"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:backgroundTint="#0E8BEF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/displayMoviesButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:onClick="launchActivity"
        android:text="@string/display_movies"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:backgroundTint="#0E8BEF"
        app:layout_constraintStart_toEndOf="@+id/register_movie_button"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/favourites_button"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:onClick="launchActivity"
        android:text="@string/favourites"
        android:textSize="13sp"
        android:textStyle="bold|italic"
        app:backgroundTint="#0E8BEF"
        app:layout_constraintStart_toEndOf="@+id/displayMoviesButton"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <Button
        android:id="@+id/edit_activity"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:onClick="launchActivity"
        android:text="@string/edit_movies"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:backgroundTint="#0E8BEF"
        app:layout_constraintStart_toEndOf="@+id/search_activity"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Button
        android:id="@+id/search_activity"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:onClick="launchActivity"
        android:text="@string/search"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:backgroundTint="#0E8BEF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <Button
        android:id="@+id/rating_activity"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:onClick="launchActivity"
        android:text="@string/rating"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:backgroundTint="#0E8BEF"
        app:layout_constraintStart_toEndOf="@+id/edit_activity"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/display" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/register"
        app:tintMode="multiply" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/displayMoviesButton"
        app:srcCompat="@drawable/edit" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/favourite" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favourites_button"
        app:srcCompat="@drawable/search" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/favourites_button"
        app:srcCompat="@drawable/rating" />

</androidx.constraintlayout.widget.ConstraintLayout>